add delete method fix update bug